# mac-manger

./: .env  Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/templates/: layout.jinja
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  validation.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
design/: main.d2  main.typ  uml.d2
doc/: test.md
migrations/: 20250804030928_primary.down.sql
src/: lib.rs  main.rs  templates.rs
src/handlers/: mod.rs
src/handlers/admin/: mod.rs
tests/: admin.rs
