[package]
name = "mac-mange"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
jsonwebtoken = "9.3.1"
minijinja = "2.11.0"
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = {version = "1.47.0", features = ["full"] }
tokio-postgres = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
