[package]
name = "mac-mange"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = "0.10.1"
dotenvy = "0.15.7"
http-body-util = "0.1.3"
jsonwebtoken = "9.3.1"
minijinja = "2.11.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = {version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }
