[workspace]
members = [
    "crates/api",
    "crates/db",
    "crates/common",
    "crates/bin"
]

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.2"
thiserror = "2.0.12"
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = "0.10.1"
dotenvy = "0.15.7"
http-body-util = "0.1.3"
jsonwebtoken = "9.3.1"
minijinja = "2.11.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = {version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }
