[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }